# uav_design

./: MUJOCO_LOG.TXT  README.md  pyproject.toml  quadrotor.xml
control_strategies/: 12statesforcomp.py  MUJOCO_LOG.TXT  UAV.py  io_control.py  mpc.py  mpc_playground velocity 9states equilpoint.py  mpc_playground velocity 9states.py  mpc_playground velocity.py  mpc_playground.py  mpc_playground_1D_eg.py  mpc_playground_inverted_pendulum.py  mpc_playground_position.py  mpc_playground_simple_eg.py  mpc_playground_velocity_12states.py  mpc_playground_velocity_9states_nonlinsim.py  mpc_playground_velocity_eg_code.py  mpc_playground_velocity_nonlinsim_nonlincont.py  original 12 states.py  random_experiments.py
control_strategies/experiments/: mpc_playground_velocity_12states.py  mpc_playground_velocity_12states_nonlinsim_nonlincont.py
control_strategies/mpc/: 12_states_lin_sim.py  12_states_linear_controller.py  12_states_linear_controller_12alg.py  12_states_linear_controller_class_version.py  12_states_nonlin_sim.py  12_states_nonlinear_model_class_version.py  global_vars_mpc.py  mpc_mujoco.py  mpc_test_script.py  mpc_test_script_class_version.py  quadrotor.xml  simple_differential.py  utils.py  (+1 more)
design/: environment.xml  example_quad.json  make_design.py
examples/other/: uav.py  (+6 more)
template_mujoco_python/: MUJOCO_LOG.TXT  controller_try.py  convex_opt.py  horizontal_control_mujoco.py  io_control.py  quadrotor.xml  symbols.py  template_mujoco.py
testing/: circular_trajectory.py  controller_try.py  template_mujoco.py
tiltrotor_control/: quadrotor.xml  template_mujoco.py
(+14 files in other folders)
